# physics3d

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp
src/graphics/gl_utilities/: cube_mesh.cpp
src/graphics/renderer/: renderer.hpp
src/graphics/shader/: phong_shader.cpp  phong_shader.hpp  shader.cpp  shader.hpp
src/graphics/utils/: cube_mesh.hpp
